fixed modal z-index bag

--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -115,15 +115,10 @@
   }
 }
 
-.nav__background-notouch {
-
-}
-
 .nav__list-wrap {
   display: grid;
   grid-template-columns: repeat(5, min-content);
   grid-column-gap: 20px;
-  color: @standart-white;
   width: 100%;
   height: 100%;
 
